# errlypy

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml  pact-consumer.yml  release.yml
errlypy/: api.py  config.py  lib.py
errlypy/client/: __init__.py  credentials.py  urllib.py
errlypy/django/: __init__.py  http.py  module.py  plugin.py
errlypy/excepthook/: events.py  module.py  plugin.py
errlypy/exception/: __init__.py  callback.py  stack.py
errlypy/fastapi/: __init__.py  events.py  module.py  plugin.py
errlypy/internal/: config.py  encoder.py
errlypy/internal/event/: type.py
errlypy/models/: ingest.py
pacts/: .gitkeep
tests/django/: test_asgi_mysite.py  test_django.py
tests/django/mysite/: manage.py  views.py
tests/excepthook/: test_excepthook.py
tests/pact/: __init__.py  test_consumer.py
