[project]
name = "errlypy"
version = "0.1.0"
description = ""
authors = [
    { name = "Evgeniy Vdovin", email = "enjoyintheheat@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2,<5.0",
    "aiohttp>=3.9.3,<4.0",
    "channels[daphne]>=4.1.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pre-commit>=3.6.0,<4.0",
    "mypy>=1.8.0,<2.0",
    "ruff>=0.1.15,<0.2",
    "pytest-asyncio>=0.23.4,<0.24",
    "types-mock>=5.1.0.20240106,<6.0",
    "werkzeug>=3.0.3,<4.0",
    "coverage>=7.6.12,<8.0",
    "uv>=0.1.18",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C4", "SIM", "I"]
ignore = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
